name:                display
version:             0.1.0
synopsis:            The backbone Display library for interactive-diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dan Frumin
maintainer:          difrumin@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:     Diagrams.Interactive.Display,
                       Diagrams.Interactive.Display.Static,
                       Diagrams.Interactive.Display.Dynamic
  other-modules:       Diagrams.Interactive.Display.Orphans                     
  ghc-options:         -O2 -threaded -Wall -Werror -fno-warn-orphans
  build-depends:       base >=4.6,
                       blaze-html ==0.6.*,  
                       blaze-svg ==0.3.*,
                       cereal ==0.3.*,
                       data-default,
                       diagrams-lib >= 0.6 && < 0.8,
                       diagrams-svg >= 0.6 && < 0.8,
                       text ==0.11.*

