name:                eval-api
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Evaluation API for Interactive Diagrams
description:         Evaluation API for the Interactive Diagrams projects.
                     Provides means of safe compilation and interpretation of Haskell code
                     (including Diagrams) using GHC API.
homepage:            http://github.com/co-dan/interactive-diagrams
license:             BSD3
license-file:        LICENSE
author:              Daniil Frumin
maintainer:          difrumin@gmail.com
-- A copyright notice.
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Eval, Eval.EvalError, Eval.EvalM, Eval.EvalSettings, Eval.Helpers, Eval.Limits
  other-modules:       SignalHandlers
  
  build-depends:       base >=4.6 && <5,
                       transformers ==0.3.*,
                       mtl ==2.1.*,
                       bytestring ==0.10.*,
                       filepath ==1.3.*,
                       unix >=2.6 && <2.8,
                       async ==2.0.*,
                       cereal ==0.3.*,
                       ghc-paths ==0.1.*,
                       data-default ==0.5.*,
                       ghc >= 7.6,
                       display ==0.1.*
                       
  
  hs-source-dirs:      src
  

executable evali
  main-is:             EvalInteractive.hs
  ghc-options:         -threaded -O2
  hs-source-dirs:      src-bin
  build-depends:       base,
                       transformers,
                       readline,
                       data-default,
                       time,
                       text,
                       eval-api,
                       display
