name:                eval-api
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Evaluation API for Interactive Diagrams

description:         Evaluation API for the Interactive Diagrams projects.
                     Provides means of safe compilation and interpretation of Haskell code (including Diagrams) using GHC API.

homepage:            http://github.com/co-dan/interactive-diagrams
bug-reports:         https://github.com/co-dan/interactive-diagrams/issues
author:              Daniil Frumin <difrumin@gmail.com>
maintainer:          Dan Frumin <difrumin@gmail.com>
license:             BSD3
license-file:        LICENSE

category:            Compilers/Interpreters
build-type:          Simple
cabal-version:       >=1.8

extra-source-files:  examples/*.hs

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans
  exposed-modules:     Diagrams.Interactive.Eval,
                       Diagrams.Interactive.Eval.EvalWorker,
                       Diagrams.Interactive.Eval.EvalM,
                       Diagrams.Interactive.Eval.EvalSettings,
                       Diagrams.Interactive.Eval.EvalError,
                       Diagrams.Interactive.Eval.Helpers,
                       Diagrams.Interactive.Eval.Handlers,
                       SignalHandlers
  build-depends:       base >=4.6 && <5,
                       transformers ==0.3.*,
                       mtl ==2.1.*,
                       bytestring ==0.10.*,
                       filepath ==1.3.*,
                       unix >=2.6 && <2.8,
                       async ==2.0.*,
                       cereal ==0.3.*,
                       ghc-paths ==0.1.*,
                       data-default ==0.5.*,
                       ghc >= 7.6,
                       display ==0.1.*,
                       vector ==0.10.*,
                       hashable, 
                       text,
                       restricted-workers,
                       stm,
                       monad-control,
                       network ==2.4.*,
                       directory ==1.2.*,
                       selinux


executable eval-service  
  hs-source-dirs:      src-service
  main-is:             Main.hs
  ghc-options:         -O2 -Wall 
  build-depends:       base,
                       transformers,
                       network ==2.4.*,
                       data-default,
                       cereal,
                       time,
                       restricted-workers,
                       text,
                       unix,
                       filepath,
                       directory,
                       bytestring,
                       eval-api,
                       display

-- executable evali
--   hs-source-dirs:      src-bin
--   main-is:             EvalInteractive.hs
--   ghc-options:         -O2 -Wall
--   build-depends:       base,
--                        transformers,
--                        readline,
--                        data-default,
--                        time,
--                        restricted-workers,
--                        text,
--                        eval-api,
--                        display  

source-repository head
  type:                 git
  location:             git://github.com/co-dan/interactive-diagrams.git
