name:                restricted-workers
synopsis:            Interface for running workers under system restrictions
version:             0.1.0.0
description:         This library provides an abstract interface for running various kinds of workers under resource restrictions.
                     It was originally developed as part of the interactive-diagrams (<http://github.com/co-dan/interactive-diagrams) project. To read more about security restrictions read my GSoC report: <http://parenz.wordpress.com/2013/07/15/interactive-diagrams-gsoc-progress-report/>.
                     
                     The library provides Worker and RestartingPool abstractions for as well as configurable security and resource restrictions settings.

                     Please consult <https://github.com/co-dan/interactive-diagrams/tree/master/restricted-workers/README.md> for more details.

                     /Warning/: this library requires SELinux to function

homepage:            https://github.com/co-dan/interactive-diagrams/tree/master/restricted-workers/
license:             BSD3
license-file:        LICENSE
author:              Dan Frumin
maintainer:          difrumin@gmail.com
copyright:           (c) 2013 
category:            System, Concurrency, Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     System.Restricted.Worker,
                       System.Restricted.Worker.Types,
                       System.Restricted.Worker.Pool,
                       System.Restricted.Worker.Protocol,
                       System.Restricted.Worker.Internal,
                       System.Restricted.Limits,
                       System.Restricted.Types
  other-modules:       SignalHandlers
  ghc-options:         -Wall -Werror -fno-warn-orphans                                            
  build-depends:       base >=4.5 && <4.8,
                       stm >=2.4 && <2.5,
                       monad-control >=0.3 && <0.4,
                       cereal >=0.3 && <0.4,
                       unix >=2.6 && <2.8,
                       async >=2.0 && <2.1,
                       mtl >=2.1 && <2.2,
                       transformers >=0.3 && <0.4,
                       transformers-base -any,
                       network >=2.4 && <2.5,
                       directory >=1.2 && <1.3,
                       bytestring >= 0.10 && < 0.13,
                       filepath >= 1,
                       either >= 3.4,
                       text >= 0.10,
                       data-default >= 0.5,
                       selinux -any
  hs-source-dirs:      src
  default-language:    Haskell2010
