name:                restricted-workers
synopsis:            Running workers under system resource restrictions
version:             0.1.0.0
description:         This library provides an abstract interface for
                     running various kinds of workers under resource
                     restrictions. It was originally developed as part
                     of the interactive-diagrams
                     (<http://github.com/co-dan/interactive-diagrams>)
                     project. To read more about security restrictions
                     read my GSoC report:
                     <http://parenz.wordpress.com/2013/07/15/interactive-diagrams-gsoc-progress-report/>.


                     .
                     
                     The library provides Worker and RestartingPool
                     abstractions for as well as configurable security
                     and resource restrictions settings. .

                     Please consult
                     <https://github.com/co-dan/interactive-diagrams/tree/master/restricted-workers/README.md>
                     for more details.
                     
                     .
                     
                     /Warning/: this library requires SELinux to
                     function

homepage:            https://github.com/co-dan/interactive-diagrams/tree/master/restricted-workers/


author:              Dan Frumin
maintainer:          difrumin@gmail.com
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2013 

build-type:          Simple
cabal-version:       >=1.10
category:            System, Concurrency, Data

extra-source-files:  examples/EchoWorker.lhs,
                     examples/EchoPool.lhs,
                     examples/CommandEvalProtocol.lhs  

library
  exposed-modules:     System.Restricted.Limits,
                       System.Restricted.Types,
                       System.Restricted.Worker,
                       System.Restricted.Worker.Internal,
                       System.Restricted.Worker.Pool,
                       System.Restricted.Worker.Protocol,
                       System.Restricted.Worker.Types
  other-modules:       SignalHandlers
  ghc-options:         -Wall -fno-warn-orphans                                            
  build-depends:       base >=4.5 && <4.8,
                       async >=2.0 && <2.1,
                       bytestring >= 0.10 && < 0.13,
                       cereal >=0.3 && <0.4,
                       data-default >= 0.5,
                       directory >=1.2 && <1.3,
                       either >= 3.4,
                       filepath >= 1,
                       monad-control >=0.3 && <0.4,
                       mtl >=2.1 && <2.2,
                       network >=2.4 && <2.5,
                       selinux -any,
                       stm >=2.4 && <2.5,
                       text >= 0.10,
                       transformers >=0.3 && <0.4,
                       transformers-base -any,
                       unix >=2.6 && <2.8                       
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type:           git
  location:       https://github.com/co-dan/interactive-diagrams
                 