name:                scotty-pastebin
version:             0.1.0.0
synopsis:            A pastebin web app for the interactive-diagrams project
description:         A simple pastebin website for the interactive-diagrams project.
                     This runs http://paste.hskll.org
license:             BSD3
license-file:        LICENSE
author:              Dan Frumin <difrumin@gmail.com>
maintainer:          Dan Frumin <difrumin@gmail.com>
copyright:           (c) 2013
category:            Web, Compilers/Interpreters, Application
build-type:          Simple
cabal-version:       >=1.8

executable scotty-pastebin
  main-is:             Pastebin.hs
  ghc-options:         -O2 -threaded -Wall -fno-warn-orphans
  hs-source-dirs:      src       
  build-depends:       base >=4.5,
                       aeson, 
                       text ==0.11.*,
                       hastache -any,
                       bytestring ==0.10.*,
                       mtl ==2.1.*,
                       transformers ==0.3.*,
                       persistent >=1.2,
                       persistent-sqlite >=1.2,
                       persistent-template >=1.2,
                       scotty ==0.4.6.1, 
                       -- need the scotty-transformer version
                       scotty-hastache,
                       network,
                       hscolour,
                       http-types ==0.8.*,
                       blaze-html,
                       blaze-markup,
                       blaze-svg,
                       wai-extra,
                       wai-middleware-static,
                       data-default ==0.5.*,
                       display,
                       monad-logger >=0.2,
                       resourcet,
                       cereal ==0.3.*,
                       errors, either ==3.4,
                       async,
                       unix,
                       filepath,
                       hashable,
                       time,
                       ghc-paths,
                       ghc >= 7.6,
                       eval-api
