name:                scotty-pastebin
version:             0.1.0.0
synopsis:            A pastebin web app for the interactive-diagrams project
description:         A simple pastebin website for the interactive-diagrams project.
                     This runs http://paste.hskll.org
license:             BSD3
license-file:        LICENSE
author:              Dan Frumin <difrumin@gmail.com>
maintainer:          Dan Frumin <difrumin@gmail.com>
copyright:           (c) 2013
category:            Web, Compilers/Interpreters, Application
build-type:          Simple
cabal-version:       >=1.8

executable scotty-pastebin
  main-is:             Pastebin.hs
  ghc-options:         -O2 -threaded -Wall -fno-warn-orphans
  hs-source-dirs:      src       
  build-depends:       aeson, 
                       async,
                       base >=4.5,
                       blaze-html,
                       blaze-markup,
                       blaze-svg,
                       bytestring ==0.10.*,
                       cereal ==0.3.*,
                       data-default ==0.5.*,
                       display,
                       errors, 
                       either ==3.4.*,
                       eval-api,
                       feed -any,
                       filepath,
                       hashable,
                       hastache -any,
                       hscolour,
                       http-types ==0.8.*,
                       monad-logger >=0.2,
                       mtl ==2.1.*,
                       network,
                       persistent >=1.2,
                       persistent-sqlite >=1.2,
                       persistent-template >=1.2,
                       resourcet,
                       scotty ==0.4.6.1,
                       scotty-hastache,
                       text ==0.11.*,
                       time,
                       transformers ==0.3.*,
                       unix,
                       wai-extra,
                       wai-middleware-static,
                       xml -any

